Fixed graph color in dark mode.

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,19 @@ span.remark {
     font-size: 80%;
 }
 
+.strokeDark {
+    color: #000000;
+    stroke: #000000;
+    fill: #000000;
+}
+
+.darkmode .strokeDark {
+    color: #F3F4F0;
+    stroke: #F3F4F0;
+    fill: #F3F4F0;
+
+}
+
 #container {
     padding: 5px 24px 5px 24px;
 }
